test/fail_compilation/fail218.d
// 1788

void main()
{
        string a = "abc";
        double b = 7.5;

        a ~= ", " ~= b;
}

